--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -188,3 +188,9 @@ jobs:
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name : Upload artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: x86_64-OpenWrt
+        path: openwrt/bin    
